# chicago-building-permits-search

./: .gitignore  CLAUDE.md  LICENSE  README.md  pyproject.toml  scripts_verify_counts.py
.github/workflows/: refresh-pages-data.yml
docs/: disclaimer.html  index.html  list.html  map.html
docs/data/: general_contractor_licenses.json  manifest.json  permit_map_index.json  tif.geojson
docs/data/map/: permits_2006_01.json  permits_2006_02.json  permits_2006_03.json  permits_2006_04.json  permits_2006_05.json  permits_2006_06.json  permits_2006_07.json  permits_2006_08.json  permits_2006_09.json  permits_2006_10.json  permits_2006_11.json  permits_2006_12.json  permits_2007_01.json  permits_2007_02.json  permits_2007_03.json  (+232 more)
scripts/: accuracy_check.py  build_tif.py  build_zoning.py
src/chi_permits/: cli.py  config.py  db.py  ingest.py  licensed_contractors.py  primer.py  queries.py  server.py  static_export.py  web.py
superpowers/plans/: 2026-07-20-shareable-lists.md
superpowers/specs/: 2026-07-20-list-focal-start-design.md  2026-07-20-map-radius-filter-design.md  2026-07-20-shareable-lists-design.md  2026-07-22-permit-detail-screen-design.md  2026-07-23-list-directory-design.md  2026-07-23-realtime-list-sync-design.md
tests/: test_sql.py
worker/: package.json  seed-kv.js  wrangler.toml
worker/src/: cron.js  index.js  licenses.js  list-doc.js  list-room.js  lists.js  notes.js  permits.js  photos.js  profiles.js  revisions.js  socrata.js  stats.js  tags.js
worker/test/: list-doc.test.mjs  lists.test.mjs  notes.test.mjs  photos.test.mjs  tags.test.mjs
(+9 files in other folders)
