[project]
name = "chi-permits"
version = "0.1.0"
description = "Local MCP server over Chicago Building Permits data"
license = "MIT"
requires-python = ">=3.12"
dependencies = [
    "duckdb>=1.1",
    "httpx>=0.27",
    "mcp[cli]>=1.2",
    "typer>=0.12",
]

[project.scripts]
chi-permits = "chi_permits.cli:app"
chi-permits-server = "chi_permits.server:main"
chi-permits-web = "chi_permits.web:main"

[dependency-groups]
dev = ["pytest>=8.0"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/chi_permits"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
