[project]
name = "chi-permits"
version = "0.1.0"
description = "Static search and profile tool for Chicago Building Permits data"
license = "MIT"
requires-python = ">=3.12"
dependencies = [
    "duckdb>=1.1",
    "httpx>=0.27",
    "starlette>=0.37",
    "typer>=0.12",
    "uvicorn>=0.29",
]

[project.scripts]
chi-permits = "chi_permits.cli:app"
chi-permits-web = "chi_permits.web:main"

[dependency-groups]
dev = ["pytest>=8.0"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/chi_permits"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
